--- a/usr/lib/grac-editor/grac_editor.glade
+++ b/usr/lib/grac-editor/grac_editor.glade
@@ -267,6 +267,7 @@ GRAC Editor 0.1</property>
   <object class="GtkWindow" id="window_main">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">GRAC Editor</property>
+    <property name="icon_name">grac-editor</property>
     <accel-groups>
       <group name="accelgroup1"/>
     </accel-groups>
