--- a/usr/lib/grac-editor/grac_editor.glade
+++ b/usr/lib/grac-editor/grac_editor.glade
@@ -625,7 +625,7 @@ GRAC Editor 0.1</property>
                       <object class="GtkLabel" id="lbl_sound">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Sound</property>
+                        <property name="label" translatable="yes">Sound/Mic</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -661,48 +661,6 @@ GRAC Editor 0.1</property>
                       <packing>
                         <property name="left_attach">3</property>
                         <property name="top_attach">5</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="lbl_microphone">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Microphone</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="top_attach">6</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkRadioButton" id="rdo+microphone+allow">
-                        <property name="label" translatable="yes">allow</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="xalign">0</property>
-                        <property name="active">True</property>
-                        <property name="draw_indicator">True</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">2</property>
-                        <property name="top_attach">6</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkRadioButton" id="rdo+microphone+disallow">
-                        <property name="label" translatable="yes">disallow</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="xalign">0</property>
-                        <property name="active">True</property>
-                        <property name="draw_indicator">True</property>
-                        <property name="group">rdo+microphone+allow</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">3</property>
-                        <property name="top_attach">6</property>
                       </packing>
                     </child>
                     <child>
@@ -913,6 +871,15 @@ GRAC Editor 0.1</property>
                         <property name="left_attach">3</property>
                         <property name="top_attach">10</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
