--- a/usr/lib/grac-editor/grac_editor.glade
+++ b/usr/lib/grac-editor/grac_editor.glade
@@ -313,6 +313,16 @@ GRAC Editor 0.1</property>
                       </object>
                     </child>
                     <child>
+                      <object class="GtkMenuItem" id="menu_remove_user_rule">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">_Remove User Rule(U)</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_menu_remove_user_rule_activate" swapped="no"/>
+                        <accelerator key="u" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkSeparatorMenuItem" id="menuitem2">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
