--- a/usr/lib/grac-editor/grac_editor.glade
+++ b/usr/lib/grac-editor/grac_editor.glade
@@ -50,7 +50,7 @@
         <property name="label" translatable="yes">_Help(H)</property>
         <property name="use_underline">True</property>
         <signal name="activate" handler="on_menu_help_activate" swapped="no"/>
-        <accelerator key="h" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+        <accelerator key="F1" signal="activate"/>
       </object>
     </child>
     <child>
