--- a/usr/lib/grac-editor/grac_editor.ui
+++ b/usr/lib/grac-editor/grac_editor.ui
@@ -14,7 +14,7 @@
         <property name="label" translatable="yes">_Reset(R)</property>
         <property name="use-underline">True</property>
         <signal name="activate" handler="on_menu_load_activate" swapped="no"/>
-        <accelerator key="l" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+        <accelerator key="r" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
       </object>
     </child>
     <child>
@@ -24,7 +24,7 @@
         <property name="label" translatable="yes">_Save(S)</property>
         <property name="use-underline">True</property>
         <signal name="activate" handler="on_menu_apply_activate" swapped="no"/>
-        <accelerator key="a" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+        <accelerator key="s" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
       </object>
     </child>
     <child>
@@ -47,7 +47,7 @@
       <object class="GtkMenuItem" id="menu_help">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label" translatable="yes">_Help(H)</property>
+        <property name="label" translatable="yes">_Help(F1)</property>
         <property name="use-underline">True</property>
         <signal name="activate" handler="on_menu_help_activate" swapped="no"/>
         <accelerator key="F1" signal="activate"/>
