usb memory switch button input focus disable
Change-Id: I07f585181adbfce0ce2cf6e65d952b73d9b9005d

--- a/usr/lib/grac-editor/grac_editor.ui
+++ b/usr/lib/grac-editor/grac_editor.ui
@@ -152,7 +152,7 @@
                           <object class="GtkSwitch" id="swtch+usb_memory">
                             <property name="name">wdn_swch_usb_memory</property>
                             <property name="visible">True</property>
-                            <property name="can-focus">True</property>
+                            <property name="can-focus">False</property>
                             <property name="active">True</property>
                             <signal name="notify::active" handler="on_swtch_usb_memory_active_notify" swapped="no"/>
                             <style>
